full read-through and figure edits

--- a/ccs/analysis.tex
+++ b/ccs/analysis.tex
@@ -5,16 +5,19 @@
 
 \subsection{Number of Proxies and Keys}
 
-\subsection{Increased Attack Surface}
+\subsection{Passive Inside Attacker}
+This is also an overreaching subpoena/NSL.
 
 {\bf Inferring content from popularity.}
 An attacker inferring popularity of content based on the number of accesses and inferring the web page from the popularity.
+
+{\bf Inferring content based on content length.}
+An attacker who infers the web page from the length of the content (or number of blocks).
+
+\subsection{Active Measurements + Overreaching Subpoena}
 
 {\bf Spoofing origin server content updates.}
 An attacker who spoofs origin server content updates.
 
 {\bf Guessing attacks.}
 An attacker who is attempting to learn if a client is accessing a specific URL or not by submitting requests to see if they match other clients' requests (this should be fixed by adding blinding).
-
-{\bf Inferring content based on content length.}
-An attacker who infers the web page from the length of the content (or number of blocks).
