--- a/ccs/discussion.tex
+++ b/ccs/discussion.tex
@@ -7,3 +7,8 @@
 
 \subsection{Private CDNs}
 Such as Netflix, Facebook, Google --- \system{} doesn't work for them because they are the content publisher {\it and} the CDN.
+
+\subsection{Proxy Selection}
+To provide more mixing than the proxy already provides, 
+the proxy that is used could be selected based 
+on a Proxy Auto Configuration (PAC) file.
