--- a/ccs/protocol.tex
+++ b/ccs/protocol.tex
@@ -4,6 +4,7 @@ Based on the design decisions discussed in the previous section, we specify the
 steps taken to publish and retrieve content in \system{}.
 
 \subsection{Publishing Content}
+\label{sec:publish_protocol}
 In order to publish content such that the CDN never sees the content, the publisher 
 must first obfuscate her content, as described in Section \ref{sec:obfuscate_content}. 
 Figure \ref{fig:publishing} shows the steps taken when publishing content.
