--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -9,6 +9,53 @@
   publisher={IEEE Press}
 }
 
+@misc{datcat,
+  title = "{DatCat: Internet Measurement Data Catalog}",
+  key = "{DatCat}",
+  howpublished = {\url{http://imdc.datcat.org/}}
+}
+
+@inproceedings{berger2017adaptsize,
+  title={AdaptSize: Orchestrating the Hot Object Memory Cache in a Content Delivery Network},
+  author={Berger, Daniel S and Sitaraman, Ramesh K and Harchol-Balter, Mor},
+  booktitle={14th USENIX Symposium on Networked Systems Design and Implementation (NSDI 17)},
+  pages={483--498},
+  year={2017},
+  organization={USENIX Association}
+}
+
+@article{berger2016achieving,
+  title={Achieving high cache hit ratios for CDN memory caches with size-aware admission},
+  author={Berger, Daniel S and Sitaraman, Ramesh K and Harchol-Balter, Mor},
+  year={2016}
+}
+
+@inproceedings{butkiewicz2011understanding,
+  title={Understanding website complexity: measurements, metrics, and implications},
+  author={Butkiewicz, Michael and Madhyastha, Harsha V and Sekar, Vyas},
+  booktitle={Proceedings of the 2011 ACM SIGCOMM conference on Internet measurement conference},
+  pages={313--328},
+  year={2011},
+  organization={ACM}
+}
+
+@string{OSDI02 = "Proc.\ of the Fifth Symposium on Operating Systems Design and Implementation"}
+@string{USENIXASSOC = "{USENIX} {Association}"}
+
+@InProceedings{White+:osdi02,
+        Author = {Brian White and Jay Lepreau and Leigh Stoller and
+                  Robert Ricci and Shashi Guruprasad and Mac Newbold and
+                  Mike Hibler and Chad Barb and Abhijeet Joglekar},
+        Title={An Integrated Experimental Environment
+                 for Distributed Systems and Networks},
+        booktitle = OSDI02,
+	organization = USENIXASSOC,
+        address = {Boston, MA},
+        month  = dec,
+        year   = 2002,
+	pages  = "255--270"
+}
+
 @misc{cedexis,
   title = "{Cedexis}",
   key = "Cedexis",
