split up security analysis, did literature search

--- a/ccs/discussion.tex
+++ b/ccs/discussion.tex
@@ -12,3 +12,11 @@ Such as Netflix, Facebook, Google --- \system{} doesn't work for them because th
 To provide more mixing than the proxy already provides, 
 the proxy that is used could be selected based 
 on a Proxy Auto Configuration (PAC) file.
+
+\subsection{Active Measurements + Overreaching Subpoena}
+
+{\bf Spoofing origin server content updates.}
+An attacker who spoofs origin server content updates.
+
+{\bf Guessing attacks.}
+An attacker who is attempting to learn if a client is accessing a specific URL or not by submitting requests to see if they match other clients' requests (this should be fixed by adding blinding).
