--- a/ccs/paper.tex
+++ b/ccs/paper.tex
@@ -84,7 +84,7 @@
 \input{design}
 \input{protocol}
 %\input{details}
-\input{analysis}
+%\input{analysis}
 \input{performance}
 \input{discussion}
 \input{related_work}
