--- a/ccs/related_work.tex
+++ b/ccs/related_work.tex
@@ -1,8 +1,9 @@
 \section{Related Work}
 \label{sec:related}
 
-{\bf Security Issues in CDNs.} ~\cite{chen2016forwarding,triukose2009content,su2008thinning,lesniewski2005ssl,michalakis2007ensuring,levy2015stickler,liang2014https}
 
-{\bf Mapping CDNs.}
+{\bf Securing CDNs.} ~\cite{lesniewski2005ssl,michalakis2007ensuring,levy2015stickler,gilad2016cdn}\\
+{\bf Security Issues in CDNs.} ~\cite{chen2016forwarding,triukose2009content,su2008thinning,liang2014https,jia2016anonymity,zolfaghari2016practical,jung2002flash}\\
+{\bf Measuring and Mapping CDNs.} ~\cite{calder2013mapping,huang2008measuring,su2009drafting,scott2016satellite,wendell2011going,xue2017cdns,berger2017adaptsize}
 
 
