--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -9,10 +9,88 @@
   publisher={IEEE Press}
 }
 
+@article{xue2017cdns,
+  title={CDNs Meet CN An Empirical Study of CDN Deployments in China},
+  author={Xue, Jingan and Choffnes, David and Wang, Jilong},
+  journal={IEEE Access},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{gilad2016cdn,
+  title={CDN-on-demand: an affordable DDoS defense via untrusted clouds},
+  author={Gilad, Yossi and Herzberg, Amir and Sudkovitch, Michael and Goberman, Michael},
+  booktitle={Network and Distributed Security Symposium (NDSS)},
+  year={2016}
+}
+
+@inproceedings{huang2008measuring,
+  title={Measuring and evaluating large-scale CDNs},
+  author={Huang, Cheng and Wang, Angela and Li, Jin and Ross, Keith W},
+  booktitle={ACM IMC},
+  volume={8},
+  year={2008}
+}
+
+@inproceedings{jung2002flash,
+  title={Flash crowds and denial of service attacks: Characterization and implications for CDNs and web sites},
+  author={Jung, Jaeyeon and Krishnamurthy, Balachander and Rabinovich, Michael},
+  booktitle={Proceedings of the 11th international conference on World Wide Web},
+  pages={293--304},
+  year={2002},
+  organization={ACM}
+}
+
+@inproceedings{wendell2011going,
+  title={Going viral: flash crowds in an open CDN},
+  author={Wendell, Patrick and Freedman, Michael J},
+  booktitle={Proceedings of the 2011 ACM SIGCOMM conference on Internet measurement conference},
+  pages={549--558},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{scott2016satellite,
+  title={Satellite: Joint analysis of CDNs and network-level interference},
+  author={Scott, Will and Anderson, Thomas and Kohno, Tadayoshi and Krishnamurthy, Arvind},
+  booktitle={2016 USENIX Annual Technical Conference (USENIX ATC 16)},
+  pages={195--208},
+  year={2016},
+  organization={USENIX Association}
+}
+
+@inproceedings{zolfaghari2016practical,
+  title={Practical Censorship Evasion Leveraging Content Delivery Networks},
+  author={Zolfaghari, Hadi and Houmansadr, Amir},
+  booktitle={Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={1715--1726},
+  year={2016},
+  organization={ACM}
+}
+
+@inproceedings{calder2013mapping,
+  title={Mapping the expansion of Google's serving infrastructure},
+  author={Calder, Matt and Fan, Xun and Hu, Zi and Katz-Bassett, Ethan and Heidemann, John and Govindan, Ramesh},
+  booktitle={Proceedings of the 2013 conference on Internet measurement conference},
+  pages={313--326},
+  year={2013},
+  organization={ACM}
+}
+
 @misc{datcat,
   title = "{DatCat: Internet Measurement Data Catalog}",
   key = "{DatCat}",
   howpublished = {\url{http://imdc.datcat.org/}}
+}
+
+@article{jia2016anonymity,
+  title={Anonymity in Peer-assisted CDNs: Inference Attacks and Mitigation},
+  author={Jia, Yaoqi and Bai, Guangdong and Saxena, Prateek and Liang, Zhenkai},
+  journal={Proceedings on Privacy Enhancing Technologies},
+  volume={2016},
+  number={4},
+  pages={294--314},
+  year={2016}
 }
 
 @inproceedings{berger2017adaptsize,
