added related work

--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -226,6 +226,12 @@
   organization={Springer}
 }
 
+@misc{predict,
+  title = "{The Zettabyte Era — Trends and Analysis – Cisco}",
+  key = "Zettabyte", 
+  howpublished = {\url{http://www.cisco.com/c/en/us/solutions/collateral/service-provider/visual-networking-index-vni/vni-hyperconnectivity-wp.html}}
+}
+
 @inproceedings{su2008thinning,
   title={Thinning Akamai},
   author={Su, Ao-Jan and Kuzmanovic, Aleksandar},
