--- a/ccs/intro.tex
+++ b/ccs/intro.tex
@@ -1,24 +1,116 @@
 \section{Introduction}
 \label{sec:intro}
 
-While government access of data at a CDN could compromise a client's privacy, it becomes a more complex issue when the data being cached is geographically 
-distributed. This is clearly illustrated in the following example.  There is a content publisher in 
-country X, and she's a customer of a CDN, so her content is replicated at cache nodes in many 
-different countries.  The CDN is headquartered 
-in country Y and operates cache nodes around the world.  In this scenario it is not clear which government can ask the CDN for information; for 
-example, a government adversary may wish to learn the identity of the owner of the content, or which clients are accessing 
-this content.  Country X could demand the information of the CDN by arguing that the content is originating 
-from their country; Country Y could argue for the access to the data by stating that the CDN falls under their 
-law.  Lastly, another country may request the information because the content is replicated and stored within 
-their country.  The fact that CDNs distribute content and store it around the world opens the possibility of 
-many governments demanding access to publisher and client information.
+Governments are increasingly using their authority to access data from
+their citizens and foreigners, even when this data may be stored overseas.  For
+example, in a
+recent case, the United States government tried to compel Microsoft to
+surrender data about U.S. citizens, even when the data itself was stored
+abroad. Users may also face the converse problem, where access to their data
+may depend on the laws of the country where their data is stored. Recent work,
+for example, highlights the possibility that governments may move data across
+borders to facilitate surveillance.  
 
-The stakeholders in this 
-example are the content publisher, the CDN, and the Internet users --- and each of these entities differ in what 
-they have at stake.  Alice may be punished for publishing controversial content (such as content that 
-goes against the current regime); the CDN 
-may be held liable for controversial information (or copyright infringing content); the Internet users' 
-privacy could be leaked.  Each stakeholder should be interested (and possibly worried) about the 
-consequences of overreaching government access.  \system{} is a novel design that allows technologists to play 
-a role in the way data is governed, and to protect users, operators, and publishers from an overreaching government (or 
-conflicting jurisdictional policies).
+The rise of content distribution networks (CDNs) makes the threats to citizen
+privacy more widespread, because data may be replicated in geographically
+diverse regions, and users may not have purview over where their data is
+stored, or where their traffic goes.  One way to address this issue is to give
+users better control over the routes that either traffic takes between the
+client and a content provider; previous work has developed defenses that can
+better help users control such routing of traffic. Yet, control over routing
+is only part of the story: if content is {\em hosted} in a particular country,
+then user traffic might traverse that country simply to retrieve the content.
+Thus, protecting user privacy requires protecting not only the routes that
+traffic traverses, but also both the contents and the access patterns of data
+stored on CDN cache nodes.
+
+In this paper, we design and implement a content distribution network that
+allows clients to retrieve web objects, while preventing the CDN cache nodes
+from learning either the content that is stored on the cache nodes or the
+content that clients are requesting. We call this system an {\em oblivious
+CDN}~(OCDN), because the CDN itself is oblivious to both the content it is
+storing and the content that clients are requesting. OCDN allows clients to
+request individual objects with identifiers that are encrypted with a key that
+is shared by a client proxy and the origin server that is pushing content to
+cache nodes, but is not known to any of the CDN cache nodes.  To do so, the
+origin server publishes multiple replicas of each object, each encrypted under
+a different shared key that is subsequently shared with a corresponding client
+proxy. To retrieve content, a client proxy transforms the URL that it receives
+from a client to an obfuscated identifier using the key shared with the origin
+server. The CDN cache node then returns the object corresponding to the object
+identifier; that object is also encrypted with a key that is shared between
+the origin and the proxy. This approach allows a user to retrieve content from
+a CDN without the cache node ever seeing the URL or the corresponding content.
+Users can use OCDN with minimal modification to their existing configuration:
+merely directing a web browser to an OCDN proxy allows a client to use the
+system.
+
+Although the basic mechanisms for obfuscating the URL and the corresponding
+content are relatively straightforward, ensuring that the CDN operator never
+learns information about either (1)~what content is being stored on its cache
+nodes or (2)~which objects individual clients are requesting is more
+challenging, due to the many possible inference attacks that a CDN might be
+able to run. For example, previous work has shown that even when web content
+is encrypted, the retrieval of a collection of objects of various sizes can
+yield information about the web page that was being fetched. Similarly, URLs
+can often be inferred from relative popularity in a distribution of web
+requests, even when the requests themselves are encrypted. OCDN addresses
+these challenges by creating copies of the same object that are encrypted
+under different keys, and deploying multiple versions of the same object to
+the same CDN cache node, with each copy being encrypted with a different key.
+While this approach reduces the threat of various types of inference and also
+limits the number of OCDN proxies that share a key, each CDN cache node must
+store multiple copies of the same object, reducing both storage efficiency and
+cache hit rates. Our evaluation explores the implications of this tradeoff, as
+well as how OCDN performs relative to a conventional CDN.
+
+We make the following contributions. First, we explore the problems that
+arise when data is stored across jurisdictional boundaries and highlight the
+need for a CDN that is oblivious to the content it is hosting and serving.
+Second, we design and implement OCDN, a CDN that can be oblivious to the
+content that it is hosting, as well as the content that clients are
+retrieving. Finally, we evaluate the performance of OCDN for both individual
+object retrieval and complete web page loads and show that OCDN incurs a performance
+overhead of only XX\% relative to conventional CDNs.
+
+The rest of the paper is organized as follows. Section~\ref{sec:background} describes
+the typical operation of a CDN, the types of information that CDN operators
+typically know today, and the types of information we aim to obfuscate.  Section~
+\ref{sec:threat} describes the threat model and security objectives for OCDN; based
+on these threats, Section~\ref{sec:design} outlines various design decisions. Section~
+\ref{sec:protocol} describes the protocol for both publishing and retrieving content,
+and Section~\ref{sec:evaluation} evaluates the performance overhead of OCDN. Section~
+\ref{sec:discussion} describes various limitations and possible avenues for future
+work, Section~\ref{sec:related} discusses related work, and Section~\ref{sec:conclusion}
+concludes.
+
+
+\if 0
+While government access of data at a CDN could compromise a client's privacy,
+it becomes a more complex issue when the data being cached is geographically
+distributed. This is clearly illustrated in the following example.  There is a
+content publisher in  country X, and she's a customer of a CDN, so her content
+is replicated at cache nodes in many  different countries.  The CDN is
+headquartered  in country Y and operates cache nodes around the world.  In
+this scenario it is not clear which government can ask the CDN for
+information; for  example, a government adversary may wish to learn the
+identity of the owner of the content, or which clients are accessing  this
+content.  Country X could demand the information of the CDN by arguing that
+the content is originating  from their country; Country Y could argue for the
+access to the data by stating that the CDN falls under their  law.  Lastly,
+another country may request the information because the content is replicated
+and stored within  their country.  The fact that CDNs distribute content and
+store it around the world opens the possibility of  many governments demanding
+access to publisher and client information.
+
+The stakeholders in this example are the content publisher, the CDN, and the
+Internet users --- and each of these entities differ in what  they have at
+stake.  Alice may be punished for publishing controversial content (such as
+content that  goes against the current regime); the CDN  may be held liable
+for controversial information (or copyright infringing content); the Internet
+users'  privacy could be leaked.  Each stakeholder should be interested (and
+possibly worried) about the  consequences of overreaching government access.
+\system{} is a novel design that allows technologists to play  a role in the
+way data is governed, and to protect users, operators, and publishers from an
+overreaching government (or  conflicting jurisdictional policies).
+\fi 
